--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "Pokedex-react",
+  "name": "Fruitdex-react",
   "version": "1.0.0",
   "description": "Aplicación web que permite buscar información de tu Pokémon favorito",
+  "main": "source/app.js",
   "scripts": {
-    "build": "browserify -t babelify ./source/app.js > ./public/js/build.js",
-    "server": "babel-node server.js"
+    "server":"babel-node server.js",
+    "watch": "watchify ./source/app.js -o ./public/js/build.js -v",
+    "browserify": "browserify ./source/app.js | uglifyjs > ./public/js/build.js",
+    "build": "npm run browserify ",
+    "start": "npm run watch & babel-node server.js"
   },
   "repository": {
     "type": "git",
@@ -14,15 +18,25 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.13.0",
+    "gulp": "^3.9.1",
     "node-babel": "^0.1.2",
     "react": "^0.13.3",
-    "react-engine": "^1.7.0"
+    "react-engine": "^1.7.0"    
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babelify": "^6.1.2",
-    "browserify": "^10.2.4"
+    "browserify": "^10.2.4",
+    "reactify": "^1.1.1",
+    "watchify": "^3.7.0",
+    "uglify-js": "^2.7.3",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "browserify": {
+    "transform": [
+      "reactify"
+    ]
   }
 }
